	STDIN instead of a real file if the parameter is "-".

2008-06-01  Daniel Hahler  <debian-bugs@thequod.de>

	* src/archives.c (tarobject): Improve error message stating that
	dpkg is unable to create a file so that it also refers to the real
	filename instead of the non-diverted name only.

2008-05-29  Colin Watson  <cjwatson@debian.org>

	* lib/triglib.c (trig_incorporate): Fix typo in comment.

2008-05-24  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/build.c (do_build): Move argument name into a parameter to
	coalesce similar strings for translation.
	* dpkg-split/info.c (do_info): Likewise.
	* dpkg-split/join.c (do_join): Likewise.
	* dpkg-split/queue.c (do_queue): Likewise.
	* src/enquiry.c (audit, unpackchk, assertversion, predeppackage)
	(printarch): Likewise.
	* src/select.c (setselections, clearselections): Likewise.

2008-05-24  Guillem Jover  <guillem@debian.org>

	* dpkg-deb/main.c: Include <dpkg-priv.h>.
	(setaction): Use sizeof_array instead of ad-hoc calculation.
	* dpkg-split/main.c: Include <dpkg-priv.h>.
	(setaction): Use sizeof_array instead of ad-hoc calculation.

2008-05-24  Guillem Jover  <guillem@debian.org>

	* src/trigcmd.c (main): Remove duplicate program name from badusage.

2008-05-19  Martin Koeppe  <mkoeppe@gmx.de>,
            Guillem Jover  <guillem@debian.org>

	* dpkg-deb/Makefile.am (dpkg_deb_LDADD): Move 'libcompat.a' and
	'$(LIBINTL)' after 'libdpkg.a'.
	* dpkg-split/Makefile.am (dpkg_split_LDADD): Likewise.
	* dselect/Makefile.am (dselect_LDADD): Likewise.
	* /src/Makefile.am (dpkg_LDADD): Likewise.
	(dpkg_query_LDADD): Likewise.
	(dpkg_trigger_LDADD): Likewise.

2008-05-19  Guillem Jover  <guillem@debian.org>

	* scripts/Dpkg/Source/Package.pm ($diff_ignore_default_regexp): Add
	'.be'.
	(@tar_ignore_default_pattern): Likewise.

2008-05-12  Guillem Jover  <guillem@debian.org>

	* scripts/dpkg-gencontrol.pl ($package_type): Rename to ...
	($pkg_type): ... this, for uniformity.

2008-05-12  Guillem Jover  <guillem@debian.org>