@@ -140,6 +140,12 @@
 
 2008-05-29  Colin Watson  <cjwatson@debian.org>
 
+	* lib/dbmodify.c (modstatdb_note): Add a comment around obscure bits
+	of trigger handling code.
+	* src/trigproc.c (trigproc): Likewise.
+
+2008-05-29  Colin Watson  <cjwatson@debian.org>
+
 	* lib/triglib.c (trig_incorporate): Fix typo in comment.
 
 2008-05-24  Guillem Jover  <guillem@debian.org>
